--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="#clients-section" class="nav-link">Client</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="#contact-section" class="nav-link">Contacts</a></li>
               </ul>
             </nav>
 
