--- a/index.html
+++ b/index.html
@@ -48,24 +48,21 @@
           <div class="">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                
-                <li><a href="#services-section" class="nav-link">My Writings</a></li>
                 <li><a href="#about-section" class="nav-link">About</a></li>
+                <li><a href="#services-section" class="nav-link">My Writings</a></li>
 
               </ul>
             </nav>
           </div>
 
-          <div class=" text-center mx-5">
-            <h1 class="m-0 site-logo"><a href="index.html">Me.</a></h1>
-          </div>
+
 
           <div class="text-left">
 
             <nav class="site-navigation position-relative" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
-                <li><a href="#clients-section" class="nav-link">Client</a></li>
+                <li><a href="#portfolio-section" class="nav-link">Activities</a></li>
+                
                 <li><a href="#contact-section" class="nav-link">Contacts</a></li>
               </ul>
             </nav>
