--- a/index.html
+++ b/index.html
@@ -55,15 +55,12 @@
             </nav>
           </div>
 
-
-
           <div class="text-left">
 
             <nav class="site-navigation position-relative" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#portfolio-section" class="nav-link">Activities</a></li>
-                
-                <li><a href="#contact-section" class="nav-link">Contacts</a></li>
+                <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
 
@@ -86,8 +83,8 @@
           <div class="col-md-12 mt-lg-5 text-left align-self-center text-intro">
             <div class="row">
               <div class="col-lg-6">
-                <h1 class="text-black">I'm Ben Carson</h1>
-                <p class="lead">I'm Web Developer Based on NY City</p>
+                <h1 class="text-black">I'm Rama rao Jammi</h1>
+                <p class="lead">Librarian and Social Servant</p>
                 <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
 
               </div>
