--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#about-section" class="nav-link">About</a></li>
                 <li><a href="#services-section" class="nav-link">My Writings</a></li>
-
+                <li><a href="#portfolio-section" class="nav-link">My Books</a></li>
               </ul>
             </nav>
           </div>
@@ -83,7 +83,7 @@
           <div class="col-md-12 mt-lg-5 text-left align-self-center text-intro">
             <div class="row">
               <div class="col-lg-6">
-                <h1 class="text-black">I'm Rama rao Jammi</h1>
+                <h1 class="text-black">I'm Rama Rao Jammi</h1>
                 <p class="lead">Librarian and Social Servant</p>
                 <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
 
