--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <img src="images/face.png" alt="Image" class="img-face" data-aos="fade">
+      <img src="images/fac.png" alt="Image" class="img-face" data-aos="fade">
 
 
     </div>
