--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row justify-content-center">
 
-          <div class="col-md-12 mt-lg-5 text-right align-self-center text-intro">
+          <div class="col-md-12 mt-lg-5 text-right align-self-right text-intro">
             <div class="row">
               <div class="col-lg-6">
                 <h1 class="text-black">I'm Rama Rao Jammi</h1>
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <img src="images/ramarao.png" alt="Image" class="img-face" data-aos="fade">
+      <img src="images/ramarao.png" alt="Image" class="img-face align-self-center" data-aos="fade">
 
 
     </div>
