--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row justify-content-center">
 
-          <div class="col-md-12 mt-lg-5 text-right align-self-center text-intro">
+          <div class="col-md-12 mt-lg-5 text-left align-self-center text-intro">
             <div class="row">
               <div class="col-lg-6">
                 <h1 class="text-black">I'm Rama Rao Jammi</h1>
