--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-  <div class="site-wrap" style="background-color: white;">
+  <div class="site-wrap bg-light">
 
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
