--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-  <div class="site-wrap bg-dark">
+  <div class="site-wrap">
 
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
@@ -42,7 +42,7 @@
 
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
 
-      <div class="container-fluid">
+      <div class="container-fluid bg-light">
         <div class="row align-items-center justify-content-center">
 
           <div class="">
