--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
+    <header class="site-navbar py-4 js-sticky-header site-navbar-target bg-light" role="banner">
 
-      <div class="container-fluid bg-light">
+      <div class="container-fluid ">
         <div class="row align-items-center justify-content-center">
 
           <div class="">
